<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dictionary</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_dict">Dictionary</string>
    <string name="action_paper">Paper</string>
    <string name="action_user_dict">Personal dictionary</string>
    <string name="action_clear_user_dict">Clear user dictionary</string>

    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>

    <string name="search_hint">Enter Word</string>
    <string name="settings_description">setting</string>

    <string name="title_dict">Dictionary</string>
    <string name="title_paper">Paper</string>
    <string name="title_paper_archive">Archive</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="drawer_personal_dict">Personal dictionary</string>
    <string name="drawer_dict_switch">Switch dictionary</string>
    <string name="drawer_paper_list">Paper list</string>
    <string name="drawer_dict_manager">Manage dictionary</string>
    <string name="drawer_paper_manager">Manage paper</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="about_title">About</string>
    <string name="about_message">Thanks to open source project Jsoup and ZBar.\nEmail support: kenhm808@gmail.com</string>
    <string name="action_clear_paper">Clear user papers</string>
    <string name="settings_auto_filter">Auto-filter</string>
    <string name="settings_auto_filter_hint">when add new paper, auto filter known words</string>
    <string name="settings_clear">Clear</string>
    <string name="settings_cancel">Cancel</string>
    <string name="key_auto_filter" translatable="false">auto_filter</string>

    <string-array name="order" translatable="false">
        <item>order by count</item>
        <item>order by time</item>
    </string-array>

</resources>
